feat: add pagination in archive api
